<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choice_of_destiny"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.domain.some.rps.ChoiceOfDestiny"
    android:background="@color/colorAccent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/rock3"
            android:id="@+id/btnRock"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btnRock" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/paper3"
            android:id="@+id/btnPaper"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btnPaper" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/scissors3"
            android:id="@+id/btnScissors"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btnScissors" />


    </LinearLayout>

    <TextView
        android:text="@string/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtWelcome"
        android:textSize="24sp"
        android:textStyle="normal|italic" />

    <TextView
        android:text="@string/txtDestiny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:id="@+id/txtDestiny"
        android:textStyle="normal|bold"
        android:textSize="30sp" />

    <TextView
        android:text="@string/txtDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:id="@+id/txtDirections" />

    <TextView
        android:text="@string/txtWinRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:id="@+id/txtWinRate"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

</RelativeLayout>
