<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_enter_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.domain.some.rps.EnterInfo"
    android:background="@color/colorAccent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:id="@+id/editText"
        android:textSize="24sp"
        android:fontFamily="sans-serif" />

    <CheckBox
        android:text="@string/chkMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/checkBox"
        android:textSize="24sp"
        android:layout_below="@+id/txtEnterName"
        android:layout_alignStart="@+id/txtEnterName" />

    <TextView
        android:text="@string/txtEnterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtEnterName"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <Button
        android:text="@string/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="91dp"
        android:id="@+id/btnStart"
        android:textSize="36sp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/checkBox"
        android:layout_alignEnd="@+id/checkBox" />
</RelativeLayout>
